--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="theme-color" content="#2B60DE">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>إدارة طلبات التوصيل</title>
+    <title>prototype</title>
     <style>
         :root {
             --primary-color: #007bff;
